@@ -48,6 +48,7 @@ language=en
 # transport features separated by semicolons
 # combination of: avatars, chatstate, filetransfer
 # if commented, all features will be used
+# This variable is DEPRACTED and will be removed in future versions. Use [features] instead.
 #transport_features = avatars;chatstate;filetransfer
 
 # if vip_mode is 1, users are divided to 2 groups according to 'vip' database field
@@ -65,6 +66,7 @@ only_for_vip=0
 # transport features separated by semicolons which will be used for VIP users.
 # combination of: avatars, chatstate, filetransfer
 # if commented, all features will be used
+# This variable is DEPRACTED and will be removed in future versions.  Use [vip-features] instead.
 #vip_features = avatars;chatstate;filetransfer
 
 # pid file
@@ -72,6 +74,18 @@ pid_file=/var/run/spectrum/$jid.pid
 
 # require_tls to connect legacy network
 #require_tls=false
+
+# Transport features, all features are enabled by default.
+[features]
+#filetransfer=1
+#avatars=1
+#chatstates=1
+
+# Transport features for VIP users, all features are enabled by default.
+[vip-features]
+#filetransfer=1
+#avatars=1
+#chatstates=1
 
 [logging]
 # log file, needs to be unique for each spectrum instance
